lab1/Test/L1-A-12-80.output
Error Type A at Line 13
Error Type B at Line 22
